--- a/Leccion_2/index.html
+++ b/Leccion_2/index.html
@@ -6,7 +6,7 @@
     <title>Elementos Básicos HTML</title>
 </head>
 <body style="background-color: bisque;">
-    <h1 style="color: blueviolet;">Universidad HTML</h1>
+    <h1 style="color: blueviolet;  font-size: 50px;  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif'; ">Universidad HTML</h1>
     <p>Primer texto del parrafo<br>Segunda linea del parrafo</p>
     <hr>
     <p>Segundo párrafo</p>
@@ -17,12 +17,13 @@
     <a href="pagina1.html">Pagina 1 HTML</a>
     <br>
     <img src="imagenes/html.png" alt="Logo HTML5" width="150px" height="150" title="Logo HTML5">
-    <!-- <img src="imagenes/js.png" alt="Logo JS" width="150"> -->
-    <!-- <img src="imagenes/css.png" alt="Logo CSS3" width="150"> -->
+    <img src="imagenes/js.png" alt="Logo JS" width="150">
+    <img src="imagenes/css.png" alt="Logo CSS3" width="150">
     <!--de esta manera podemos agregar imagenes mediante links <img src='http://globalmentoring.com.mx/imagenes/css3.png'/> -->
-    <p title="Nuevo parrafo" style="color: rgb(76, 54, 155);">
+    <p title='Nuevo parrafo'style='color: red'>
         Este es 
         nuestro párrafo</p>
+    <!--preformated es un formato ya preestablecido-->
     <pre>
         Este es 
         nuestro nuevo párrafo
