--- a/Leccion_2/pagina1.html
+++ b/Leccion_2/pagina1.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina 1 HTML</title>
 </head>
-<body>
-    <h1>Página 1 HTML</h1>
-    <p>Nuevo contenido página 1</p>
+<body style="background-color: rgb(227, 248, 246);">
+    <h1 style="color: rgba(60, 8, 202, 0.801);">Página 1 HTML</h1>
+    <p style="color: rgb(0, 0, 0);">Nuevo contenido página 1</p>
+    <hr>
     <a href="index.html">Pagina principal HTML</a>
     
 </body>
