Rutas relativas y absolutas, eventos anidados en css

--- a/Leccion_4/index.html
+++ b/Leccion_4/index.html
@@ -9,7 +9,17 @@
 <body>
     <h1>Universidad HTML links</h1>
     <br/>
-    <a href="contenido.html">Ir a contenido</a>
+    <!-- ruta relativa: indica el nombre del archivo y no el link completo -->
+    <!-- para que sead absoluta debe de estar el link completo o la ruta -->
+    <a href="web/contenido.html">Ir a contenido</a>
+    <br>
+    <!-- Abrir una pagina mediante un link o por una imagen -->
+    <!-- <a href="http://globalmentoring.com.mx" target="_blank">
+        <img src="http://globalmentoring.com.mx/imagenes/gm.png" alt="Logo GM"
+        style="width: 150px; height: 74px;"/>
+    </a> -->
+    <!-- Ruta absoluta -->
+    <a href="http://globalmentoring.com.mx">Global Mentoring</a>
 
     
 </body>
