--- a/Leccion_4/web/contenido.html
+++ b/Leccion_4/web/contenido.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contenido</title>
-    <link rel="stylesheet" href="CSS/stilos.css">
+    <link rel="stylesheet" href="/Leccion_4/CSS/stilos.css">
 </head>
 <body>
     <h1>Contenido</h1>
-    <a href="index.html">Inicio</a>
+    <p>Nuevo parrafo</p>
+    <!-- context root o raiz del proyecto /leccion_4/index...(podemos usar / o ..) -->
+    <a href="/Leccion_4/index.html">Inicio</a>
     
 </body>
 </html>
